--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "@types/glob": "^8.1.0",
     "commander": "^12.1.0",
-    "glob": "^10.4.3"
+    "glob": "^10.4.3",
+    "ignore": "^5.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
