--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "prompt-packer": "./dist/cli.js"
   },
   "scripts": {
+    "dev": "node --no-warnings --loader ts-node/esm src/cli.ts",
     "build": "tsc",
-    "dev": "node --no-warnings --loader ts-node/esm src/cli.ts"
+    "lint": "eslint . --ext .ts,.js",
+    "lint:fix": "eslint . --ext .ts,.js --fix",
+    "prepare": "husky install"
   },
   "keywords": [
     "cli",
@@ -29,8 +32,26 @@
     "ignore": "^5.3.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
     "@types/node": "^20.14.10",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
