--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,10 +2,15 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier"
+    "prettier",
+    "plugin:require-extensions/recommended"
   ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": [
+    "@typescript-eslint",
+    "prettier",
+    "require-extensions"
+  ],
   "env": {
     "node": true,
     "es6": true
