--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-require-extensions": "^0.1.3",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "ts-node": "^10.9.2",
