--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prompt-packer",
   "version": "1.0.0",
-  "description": "Pack files into a single text file for AI prompts",
+  "description": "Pack projects into a single text file for AI prompts",
   "type": "module",
   "main": "dist/index.js",
   "bin": {
