--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "lint:fix": "eslint . --ext .ts,.js --fix",
     "prepare": "husky install"
   },
+  "files": [
+    "dist",
+    "package.json",
+    "README.md",
+    "LICENSE"
+  ],
   "keywords": [
     "cli",
     "ai",
