chore(package.json): update "files"

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prepare": "husky install"
   },
   "files": [
-    "dist",
+    "dist/**/*",
     "package.json",
     "README.md",
     "LICENSE"
