chore(package.json): remove unnecessary "files"

--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "prepare": "husky install"
   },
   "files": [
-    "dist/**/*",
-    "package.json",
-    "README.md",
-    "LICENSE"
+    "dist/**/*"
   ],
   "keywords": [
     "cli",
