chore(package.json): link to the repository

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/imlutr/prompt-packer.git"
+  },
   "bin": {
     "prompt-packer": "dist/cli.js"
   },
